Crates/simulatron-salt/src/lib/snapshots/simulatron_salt__tests__addressing_modes.snap
---
source: src/lib/tests.rs
expression: pretty_print_hex_block(&object_code.code)

---
0x00000000    53 49 4D 4F  42 4A 00 01  00 00 00 00  00 00 00 01  |SIMOBJ..........|
0x00000010    11 00 00 00  0C 02 00 00  00 0A 03 00  02 00 00 00  |................|
0x00000020    32                                                  |2|
