Crates/simulatron-salt/src/lib/snapshots/simulatron_salt__tests__arithmetic.snap
---
source: src/lib/tests.rs
expression: pretty_print_hex_block(&success.simobj)

---
0x00000000    53 49 4D 4F  42 4A 00 01  00 00 00 00  00 00 00 01  |SIMOBJ..........|
0x00000010    11 00 00 00  28 21 08 03  E8 23 00 00  00 00 01 26  |....(!...#.....&|
0x00000020    01 00 27 01  00 00 00 01  2A 00 01 2D  01 00 00 00  |..'.....*..-....|
0x00000030    03 21 18 41  45 70 A4 2B  18 40 00 00  00           |.!.AEp.+.@...|
