Crates/simulatron-salt/src/lib/snapshots/simulatron_salt__tests__array_inferred-2.snap
---
source: simulatron-salt/src/lib/tests.rs
expression: failure

---
CodegenFailure {
    errors: [
        SaltError {
            span: 18..45,
            message: "Initialiser too long for stated dimensions.",
        },
        SaltError {
            span: 163..204,
            message: "Initialiser too long for stated dimensions.",
        },
    ],
    warnings: [],
}
