Crates/simulatron-salt/src/lib/snapshots/simulatron_salt__tests__array_inferred.snap
---
source: simulatron-salt/src/lib/tests.rs
expression: pretty_print_hex_block_zero(&success.simobj)

---
0x00000000    53 49 4D 4F  42 4A 00 01  00 00 00 05  00 00 00 02  |SIMOBJ..........|
0x00000010    50 00 00 00  74 03 61 72  72 00 00 00  00 50 00 00  |P...t.arr....P..|
0x00000020    00 7A 05 65  6D 70 74 79  00 00 00 00  50 00 00 00  |.z.empty....P...|
0x00000030    AE 0B 6D 65  67 61 5F 6E  65 73 74 65  64 00 00 00  |..mega_nested...|
0x00000040    00 50 00 00  00 7A 03 6D  73 67 00 00  00 00 50 00  |.P...z.msg....P.|
0x00000050    00 00 86 12  70 72 69 6D  65 73 5F 61  6E 64 5F 64  |....primes_and_d|
0x00000060    6F 75 62 6C  65 73 00 00  00 00 04 00  00 00 3A 0C  |oubles........:.|
0x00000070    00 00 00 08  61 62 63 01  02 03 48 65  6C 6C 6F 20  |....abc...Hello |
0x00000080    74 68 65 72  65 21 00 00  00 02 00 00  00 04 00 00  |there!..........|
0x00000090    00 03 00 00  00 06 00 00  00 05 00 00  00 0A 00 00  |................|
0x000000A0    00 07 00 00  00 0E 00 00  00 09 00 00  00 12 61 62  |..............ab|
0x000000B0    63 64 65 66  67 68                                  |cdefgh|
