Crates/simulatron-salt/src/lib/snapshots/simulatron_salt__tests__bitwise-2.snap
---
source: simulatron-salt/src/lib/tests.rs
expression: failure

---
CodegenFailure {
    errors: [
        SaltError {
            span: 25..28,
            message: "Operation not applicable to floats.",
        },
        SaltError {
            span: 35..39,
            message: "Symbol references resolve to addresses, which can't be used here.",
        },
        SaltError {
            span: 50..54,
            message: "Literal too large: expected single byte.",
        },
    ],
    warnings: [],
}
