Crates/simulatron-salt/src/lib/snapshots/simulatron_salt__tests__bitwise.snap
---
source: src/lib/tests.rs
expression: pretty_print_hex_block(&success.simobj)

---
0x00000000    53 49 4D 4F  42 4A 00 01  00 00 00 00  00 00 00 01  |SIMOBJ..........|
0x00000010    11 00 00 00  1A 33 00 34  00 00 00 00  80 37 01 00  |.....3.4.....7..|
0x00000020    39 01 00 3C  00 01 3A 00  01 40 00 01  44 00 02     |9..<..:..@..D..|
