Crates/simulatron-salt/src/lib/snapshots/simulatron_salt__tests__blockcopy.snap
---
source: src/lib/tests.rs
expression: pretty_print_hex_block_zero(&success.simobj)

---
0x00000000    53 49 4D 4F  42 4A 00 01  00 00 00 01  00 00 00 02  |SIMOBJ..........|
0x00000010    49 00 00 00  77 07 6D 65  73 73 61 67  65 00 00 00  |I...w.message...|
0x00000020    02 00 00 00  50 00 00 00  6F 10 00 00  00 44 04 00  |....P...o....D..|
0x00000030    00 00 40 10  00 00 00 40  00 00 40 00  00 00 50 00  |..@....@..@...P.|
0x00000040    11 00 00 00  40 00 00 40  00 00 12 00  00 00 40 00  |....@..@......@.|
0x00000050    00 00 00 00  13 00 00 00  40 00 01 14  07 00 00 40  |........@......@|
0x00000060    00 00 00 50  00 15 07 00  00 40 00 00  16 07 00 00  |...P.....@......|
0x00000070    00 00 00 17  07 00 01 48  65 6C 6C 6F  20 54 68 65  |.......Hello The|
0x00000080    72 65 21 00  00 00 00 00  00 00 00 00  00 00 00 00  |re!.............|
0x00000090    00 00 00 00  00 00 00 00  00 00 00 00  00 00 00 00  |................|
0x000000A0    00 00 00 00  00 00 00 00  00 00 00 00  00 00 00 00  |................|
0x000000B0    00 00 00 00  00 00 00                               |.......|
