Crates/simulatron-salt/src/lib/snapshots/simulatron_salt__tests__branching-4.snap
---
source: simulatron-salt/src/lib/tests.rs
expression: failure

---
CodegenFailure {
    errors: [
        SaltError {
            span: 32..36,
            message: "Label without a following instruction.",
        },
    ],
    warnings: [],
}
