Crates/simulatron-salt/src/lib/snapshots/simulatron_salt__tests__branching.snap
---
source: src/lib/tests.rs
expression: pretty_print_hex_block(&success.simobj)

---
0x00000000    53 49 4D 4F  42 4A 00 01  00 00 00 04  00 00 00 01  |SIMOBJ..........|
0x00000010    49 00 00 00  95 03 62 61  72 00 00 00  01 00 00 00  |I.....bar.......|
0x00000020    6F 49 00 00  00 97 03 62  61 7A 00 00  00 01 00 00  |oI.....baz......|
0x00000030    00 91 49 00  00 00 6E 03  66 6F 6F 00  00 00 00 49  |..I...n.foo....I|
0x00000040    00 00 00 95  20 74 68 69  73 5F 6C 61  62 65 6C 5F  |.... this_label_|
0x00000050    69 73 5F 66  69 6E 65 5F  62 75 74 5F  70 6F 69 6E  |is_fine_but_poin|
0x00000060    74 6C 65 73  73 00 00 00  00 11 00 00  00 2A 68 00  |tless........*h.|
0x00000070    00 00 00 4A  00 00 00 00  00 54 00 00  40 00 57 00  |...J.....T..@.W.|
0x00000080    59 01 5B 02  5D 03 5F 04  61 05 63 06  65 07 67 00  |Y.[.]._.a.c.e.g.|
0x00000090    48 00 00 00  00 6B 6A 00                            |H....kj.|
