Crates/simulatron-salt/src/lib/snapshots/simulatron_salt__tests__comments-2.snap
---
source: simulatron-salt/src/lib/tests.rs
expression: success.warnings

---
[
    SaltError {
        span: 247..250,
        message: "Unused private symbol.",
    },
]
